Fix timestamp alignment in Post Comments

--- a/client/my-sites/posts/style.scss
+++ b/client/my-sites/posts/style.scss
@@ -388,10 +388,6 @@
 	animation: appear .3s ease-in-out;
 }
 
-.post .comments__comment-timestamp {
-	margin-top: -4px;
-}
-
 .post .comments__view-more {
 	margin-top: 15px;
 }
